HW_2/03-k8s-networking-services/manifests/02-nodeport-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bish-frontend-deployment
  labels:
    app: bish-frontend
    author: bishwayan
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bish-frontend
  template:
    metadata:
      labels:
        app: bish-frontend
    spec:
      containers:
        - name: frontend-web
          image: nginx:1.25-alpine
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "32Mi"
              cpu: "25m"
            limits:
              memory: "64Mi"
              cpu: "50m"
---
apiVersion: v1
kind: Service
metadata:
  name: bish-frontend-nodeport
  labels:
    app: bish-frontend
    author: bishwayan
spec:
  type: NodePort
  selector:
    app: bish-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
