HW_2/03-k8s-networking-services/manifests/03-loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bish-gateway-lb
  labels:
    app: bish-frontend
    author: bishwayan
spec:
  type: LoadBalancer
  selector:
    app: bish-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
