HW_2/03-k8s-networking-services/manifests/04-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bish-db-headless
  labels:
    app: bish-stateful-db
    author: bishwayan
spec:
  clusterIP: None
  selector:
    app: bish-stateful-db
  ports:
    - name: tcp-db
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bish-db
  labels:
    app: bish-stateful-db
    author: bishwayan
spec:
  serviceName: bish-db-headless
  replicas: 2
  selector:
    matchLabels:
      app: bish-stateful-db
  template:
    metadata:
      labels:
        app: bish-stateful-db
    spec:
      containers:
        - name: db-instance
          image: busybox:1.36
          command: ["/bin/sh", "-c", "nc -lk -p 5432 -e echo 'Bishwayan DB Ready'"]
          ports:
            - containerPort: 5432
