HW_2/03-k8s-networking-services/manifests/05-externalname-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bish-external-db
  labels:
    app: external-integration
    author: bishwayan
spec:
  type: ExternalName
  externalName: db.internal.example.com
