HW_2/03-k8s-networking-services/manifests/08-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bish-suite-ingress
  labels:
    app: bish-suite
    author: bishwayan
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: bish-suite.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bish-frontend-nodeport
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: bish-backend-svc
                port:
                  number: 80
